time tracking update with js. still missing mobile version

--- a/time-tracking-dashboard/index.html
+++ b/time-tracking-dashboard/index.html
@@ -18,9 +18,9 @@
                 <h1>Mario Cachapuz</h1>
             </div>
             <div class="card-user-select">
-                <h4 id="dailybtn" onclick="dailyShow()">Daily</h4>
-                <h4>Weekly</h4>
-                <h4>Monthly</h4>
+                <h4 onclick="showDaily()">Daily</h4>
+                <h4 onclick="showWeekly()">Weekly</h4>
+                <h4 onclick="showMonthly()">Monthly</h4>
             </div>
         </div>
         <div class="cards-container">
@@ -34,10 +34,10 @@
                         </div>
                     </div>
                     <div class="card-time">
-                        <h2 id="work-hours">32hrs</h2>
+                        <h2><span class="hours-current">32</span>hrs</h2>
                     </div>
                     <div class="card-time-lastweek">
-                        <p>Last week - 36hrs</p>
+                        <p>Last week - <span class="hours-previous">36</span>hrs</p>
                     </div>
                 </div>
             </div>
@@ -51,10 +51,10 @@
                         </div>
                     </div>
                     <div class="card-time">
-                        <h2>10hrs</h2>
+                        <h2><span class="hours-current">10</span>hrs</h2>
                     </div>
                     <div class="card-time-lastweek">
-                        <p>Last week - 8hrs</p>
+                        <p>Last week - <span class="hours-previous">8</span>hrs</p>
                     </div>
                 </div>
             </div>
@@ -68,10 +68,10 @@
                         </div>
                     </div>
                     <div class="card-time">
-                        <h2>4hrs</h2>
+                        <h2><span class="hours-current">4</span>hrs</h2>
                     </div>
                     <div class="card-time-lastweek">
-                        <p>Last week - 7hrs</p>
+                        <p>Last week - <span class="hours-previous">7</span>hrs</p>
                     </div>
                 </div>
             </div>
@@ -85,10 +85,10 @@
                         </div>
                     </div>
                     <div class="card-time">
-                        <h2>4hrs</h2>
+                        <h2><span class="hours-current">4</span>hrs</h2>
                     </div>
                     <div class="card-time-lastweek">
-                        <p>Last week - 5hrs</p>
+                        <p>Last week - <span class="hours-previous">5</span>hrs</p>
                     </div>
                 </div>
             </div>
@@ -102,10 +102,10 @@
                         </div>
                     </div>
                     <div class="card-time">
-                        <h2>5hrs</h2>
+                        <h2><span class="hours-current">5</span>hrs</h2>
                     </div>
                     <div class="card-time-lastweek">
-                        <p>Last week - 10hrs</p>
+                        <p>Last week - <span class="hours-previous">10</span>hrs</p>
                     </div>
                 </div>
             </div>
@@ -119,14 +119,15 @@
                         </div>
                     </div>
                     <div class="card-time">
-                        <h2>2hrs</h2>
+                        <h2><span class="hours-current">2</span>hrs</h2>
                     </div>
                     <div class="card-time-lastweek">
-                        <p>Last week - 2hrs</p>
+                        <p>Last week - <span class="hours-previous">2</span>hrs</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <script src="./scripts/app.js"></script>
 </body>
 </html>
