--- a/nft-preview-card-component/index.html
+++ b/nft-preview-card-component/index.html
@@ -28,7 +28,7 @@
             </div>
             <hr>
             <div class="card-creator">
-                <img src="./img/mario.jpeg" alt="" width="15%">
+                <img src="https://github.com/mariocachapuz/mariocachapuz/blob/main/img/mario.jpeg?raw=true" alt="" width="15%">
                 <p>Creation of <span>Mario Cachapuz</span></p>
             </div>
         </div>
