--- a/time-tracking-dashboard/index.html
+++ b/time-tracking-dashboard/index.html
@@ -13,7 +13,7 @@
     <div class="dashboard">
         <div class="user">
             <div class="card-user-header">
-                <img src="./img/mario.jpeg" alt="" width="45%" class="avatar">
+                <img src="https://github.com/mariocachapuz/mariocachapuz/blob/main/img/mario.jpeg?raw=true" alt="" width="45%" class="avatar">
                 <p>Report for</p>
                 <h1>Mario Cachapuz</h1>
             </div>
